--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <div class="nav-items">
                             <a href="./ABOUTUS/aboutus.html">ABOUT US</a>
                             <a href="./CONTACTUS/contactus.html">CONTACT US</a>
-                            <a href="#">ARTICLES</a>
+                            <a href="https://craft-roast-frontend.vercel.app/">Resume Roast</a>
                         </div>
                     </div>
                 </div>
